# weather

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
src/provider/: dummy.rs  mod.rs  visualcrossing.rs
