[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.20", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
] }
typetag = "0.2.8"
ureq = { version = "2.6.2", features = ["json"] }

[dev-dependencies]
assert_matches = "1.5.0"
httpmock = "0.6.7"
